# biblioteca_qw

./: .gitignore  README.md  __init__.py  __main__.py  analise_resultado.py  analysis.py  db.json  det_times.csv  det_times.json  easy.py  exemplo.py  exemplo_simulacao.ipynb  graph.py  probs.csv  probs.json  pyproject.toml  results.py  setup.py  simulation.py
biblioteca/: __init__.py  graph.py  simulation.py  walker.py
biblioteca.egg-info/: PKG-INFO  SOURCES.txt
biblioteca_qw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: exemplo.py
scripts/: analise_resultado.py
tests/: test_graph.py  test_simulation.py  test_walker.py
topologies/: __init__.py  grade.py  grafo.py  hipercubo.py
